--- a/counter.css
+++ b/counter.css
@@ -65,3 +65,9 @@ body {
     background-color: #0a0a0a;
     font-size: 20px;
 }
+
+footer > p {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
